cabal-version:      2.4
name:               lambda-cpu
version:            0.0.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             Spydr06
maintainer:          

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable lambda-cpu
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base >=4.15.1.0,
        primitive ^>=0.9.0.0,
        containers >=0.4.0.0,
    hs-source-dirs:   src
    default-language: Haskell2010
